--- a/bloc1/ex1.html
+++ b/bloc1/ex1.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <title>Р¦Рµ Р·Р°РіР»РѕРІРѕРє С‚Р°Р№С‚Р»</title>
+        <meta charset="Windows-1251">
+        <title>Це загловок тайтл</title>
     </head>
     <body>
-    Р¦Рµ РѕСЃРЅРѕРІРЅРёР№ Р·РјС–СЃС‚ СЃС‚РѕСЂС–РЅРєРё
+    Це основний зміст сторінки
     </body>
 </html>
