--- a/bloc1/ex10.html
+++ b/bloc1/ex10.html
@@ -5,6 +5,6 @@
         <title>Посилання в картинці</title>
     </head>
     <body>
-    <a href="http:/phphtml.net"><img src=smile.png></a>
+    <a href="http:/phphtml.net"><img src=images.jgp></a>
     </body>
 </html>
