--- a/Practice/1TablePractice/1table.html
+++ b/Practice/1TablePractice/1table.html
@@ -4,6 +4,11 @@
                 <meta charset="UTF-8">
                 <title>Title</title>
                 <link rel="stylesheet" href="1table.css">
+                <style>
+                  table{
+                    border-collapse: collapse;
+                  }
+                </style>
             </head>
             <body>
             <table  width="600px" cellspacing="0"  cellpadding="3" >
