--- a/Practice/table1.0/table1.0.html
+++ b/Practice/table1.0/table1.0.html
@@ -43,5 +43,74 @@
         </div>
 
     </div> <!--table-->
+
+    <section class="dash">
+
+        <div class="section__up">
+            <div class="container">
+                <div class="up__inner">
+                    <div class="up__left"></div>
+                    <div class="up__center">
+                        <div class="up__center--item elem"></div>
+                        <div class="up__center--item"></div>
+                        <div class="up__center--item elem2"></div>
+                    </div>
+                    <div class="up__right">
+                            <div class="right__first"></div>
+                            <div class="right__second"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="section__mid">
+            <div class="container">
+                <div class="mid__inner">
+                    <div class="mid__right">
+                        <div class="left__slash"></div>
+                        <div class="right__slash"></div>
+                    </div>
+
+                    <div class="mid__mid">
+                        <div class="mid__top">
+                            <div class="top__central"></div>
+                            <div class="top__right">
+                                <div class="top__fight--first"></div>
+                                <div class="top__fight--second"></div>
+                            </div>
+                        </div>
+
+                        <div class="mid--bottom__box">
+                            <div class="mid__bottom">
+                                <div class="bottom__box item1"></div>
+                                <div class="bottom__box item2"></div>
+                                <div class="bottom__box item3"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> <!-- Section__mid -->
+
+        <div class="section__down">
+            <div class="container">
+                <div class="down__inner">
+                    <div class="item first "></div>
+                    <div class="item second"></div>
+                    <div class="item third"></div>
+                    <div class="item forth">
+                        <div class="double__line">
+                            <div class="first__line"></div>
+                            <div class="second__line"></div>
+                        </div>
+                        <div class="alone__line"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
 </body>
 </html>
